--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@prisma/client": "^4.14.1",
     "@remix-run/css-bundle": "^1.16.1",
     "@remix-run/node": "^1.16.1",
     "@remix-run/react": "^1.16.1",
@@ -28,6 +29,7 @@
     "concurrently": "^8.0.1",
     "eslint": "^8.38.0",
     "postcss": "^8.4.23",
+    "prisma": "^4.14.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4"
   },
